# SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: Cell.cpp  Cell.h  DataCell.cpp  DataCell.h  DrawableCell.cpp  DrawableCell.h  Fruit.cpp  Fruit.h  Game.cpp  Game.h  Grid.cpp  Grid.h  LightShader.h  NumberGenerator.cpp  NumberGenerator.h  PositionConverter.cpp  PositionConverter.h  Snake.cpp  Snake.h  SnakeSegment.cpp  SnakeSegment.h  World.cpp  World.h  main.cpp
src/General/: ConfigLoader.cpp  ConfigLoader.h  Game.cpp  Game.h  NumberGenerator.cpp  NumberGenerator.h  PositionConverter.cpp  PositionConverter.h  PositionManager.cpp  PositionManager.h  ResourceHolder.cpp  ResourceHolder.h  ShaderManager.h
src/InGame/: DataCell.cpp  DataCell.h  DrawableCell.h  Fruits.cpp  Fruits.h  GameOverScreen.cpp  GameOverScreen.h  Grid.cpp  Grid.h  LightShader.cpp  Snake.cpp  Snake.h  World.cpp  World.h
src/MainMenu/: Button.cpp  Button.h  MainMenu.cpp  MainMenu.h
